--- a/src/nested_json/Makefile.am
+++ b/src/nested_json/Makefile.am
@@ -1,8 +1,6 @@
-lib_LTLIBRARIES = nested_json.la
-
+lib_LTLIBRARIES = libnested_json.la
 SUBDIRS = minijson
-nested_json_la_LDADD = minijson.la
-
-nested_json_la_LDFLAGS = -version-info 0:0:0
-nested_json_la_SOURCES = finder.hpp parser.hpp
+libnested_json_la_LIBADD = libminijson.la
+libnested_json_la_LDFLAGS = -version-info 0:0:0
+libnested_json_la_SOURCES = finder.hpp parser.hpp
 
