--- a/src/nested_json/minijson/Makefile.am
+++ b/src/nested_json/minijson/Makefile.am
@@ -1,3 +1,3 @@
-lib_LTLIBRARIES = minijson.la
-minijson_la_LDFLAGS = -version-info 0:0:0
-minijson_la_SOURCES = minijson_reader.hpp
+lib_LTLIBRARIES = libminijson.la
+libminijson_la_LDFLAGS = -version-info 0:0:0
+libminijson_la_SOURCES = minijson_reader.hpp
