--- a/src/validation/Makefile.am
+++ b/src/validation/Makefile.am
@@ -1,4 +1,3 @@
-lib_LTLIBRARIES = validation.la
-validation_la_LDFLAGS = -version-info 0:0:0
-validation_la_SOURCES = validation.hpp
-
+lib_LTLIBRARIES = libvalidation.la
+libvalidation_la_LDFLAGS = -version-info 0:0:0
+libvalidation_la_SOURCES = validation.hpp
